fix(next.clayui.com): Fix navbar z-index

--- a/next.clayui.com/src/styles/_navbar.scss
+++ b/next.clayui.com/src/styles/_navbar.scss
@@ -3,7 +3,7 @@
 	padding: 7.5px 1.5rem;
 	position: sticky;
 	top: 0;
-	z-index: 9999;
+	z-index: 10;
 
 	@media (max-width: $grid-float-breakpoint - 1) {
 		position: relative;
